# texture-packer

./: .gitignore  Cargo.toml  Readme.md
demo/: Cargo.toml
demo/src/: main.rs
texture-packer/: Cargo.toml
texture-packer/src/: lib.rs  pack.rs  render.rs
texture-packer/src/shaders/: rect.wgsl
